# haskell-programming

./: .dir-locals.el  LICENSE  README.md  haskell-programming.cabal  stack.yaml
hangman/: hangman.cabal
hangman/src/: Main.hs
morse-code/: package.yaml
morse-code/src/: Main.hs  Morse.hs
orphan-instance/: Listy.hs  ListyInstances.hs  Note.md
src/Chapter10/: Exercises.hs  Fibs.hs
src/Chapter11/: AsPatterns.hs  BinaryTree.hs  Examples.hs  Exercises.hs  HuttonsRazor.hs  LanguageExercises.hs  Phone.hs  TooMany.hs  Vigenere.hs
src/Chapter12/: Exercises.hs
src/Chapter13/: Cipher.hs  Examples.hs  Palindrome.hs  Person.hs  Vigenere.hs
src/Chapter14/: Addition.hs  Arbitrary.hs  Arithmetic.hs  Multiply.hs  WordNumberTest.hs
src/Chapter15/: Exercises.hs  Madness.hs  MaybeAnotherMonoid.hs  MonoidExercises.hs  OptionalMonoid.hs  Patience.hs  Test.hs  Validation.hs
src/Chapter16/: Examples.hs  Exercises.hs  FlipFunctor.hs  ReplaceExperiment.hs
src/Chapter17/: BadMonoid.hs  Examples.hs  Exercises.hs  ListApplicative.hs
src/Chapter2/: FunctionWithWhere.hs  Learn.hs  Practice.hs
src/Chapter3/: Exercises.hs  Print3.hs  Print3broken.hs  Print3flipped.hs  Reverse.hs
src/Chapter4/: Exercises.hs  GreetIfCool1.hs  GreetIfCool2.hs  Moodswing.hs
src/Chapter5/: Arith3Broken.hs  DetermineTheType.hs  Examples.hs  Exercises.hs  Sing.hs  TypeKwonDo.hs
src/Chapter6/: DerivingInstances.hs  Examples.hs  Exercises.hs  Trivial.hs
src/Chapter7/: Arith2.hs  Arith4.hs  Employee.hs  Examples.hs  Exercises.hs  RegisteredUser.hs
src/Chapter8/: Examples.hs  Exercises.hs  (+2 more)
(+2 files in other folders)
