name:                haskell-programming
version:             0.1.0.0
homepage:            https://github.com/manuel-uberti/haskell-programming
license:             BSD3
license-file:        LICENSE
author:              Manuel Uberti
maintainer:          manuel.uberti@inventati.org
copyright:           2017 Manuel Uberti
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time
                     , scientific
                     , hspec
                     , QuickCheck
                     , containers
                     , checkers
